--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <script>
@@ -11,17 +12,63 @@
         var $body = $('body');
         $body.html('');
 
+
+        var $title = $('<p> Your Twits! </p>');
+        $title.appendTo($body);
+
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
+          var currentUser = tweet.user;
+
           $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
+          $tweet.appendTo($body)
           index -= 1;
-        }
+        }	
+
+        var $button = $('<p id="loader"> <button> Load Newer Tweets! </button> </p');
+        $button.appendTo($body);
+
+        $("#loader").click(function(){
+          var index = streams.home.length - 1;
+          var newTweets = streams.home[streams.home.length - 1];
+          var $newTweets = $('<div></div>');
+          $newTweets.text('@' + newTweets.user + ': ' + newTweets.message);
+          $(this).before($newTweets);  
+
+        });
 
       });
 
+/*
+two global variables, users and streams.
+1. users is an array of strings -- all the usernames that you're following.
+2. streams is an object with two properties, users and home.
+ 2.1 streams.home is an array of all tweets from all the users you're following.   
+ 2.2 streams.users is an object with properties for each user. streams.users.shawndrost has all of shawndrost's tweets.*
+
+Kicks off a periodic process that puts more data in streams.
+You'll mostly be working in the javascript block of index.html. Note: The generated tweets will be displayed in reverse chronological order.
+
+Bare Minimum Requirements
+1. Show the user new tweets somehow. (You can show them automatically as they're created, or create a button that displays new tweets.)
+2.1 streams.home is an array of all tweets from all the users you're following.
+-need to create a button
+	-problem: idk how to create button
+-everytime button is clicked, it generated a new tweet
+
+2. Display the timestamps of when the tweets were created. This timestamp should reflect the actual time the tweets were created, and should not just be hardcoded.
+
+3. Design your interface so that you want to look at and use the product you're making.
+
+4. Allow the user to click on a username to see that user's timeline.
+2.2 streams.users is an object with properties for each user. streams.users.shawndrost has all of shawndrost's tweets.*/
+
+
+
     </script>
+
+
   </body>
 </html>
